<resources>
    <string name="app_name">BMICalculatorサンプル</string>
    <string name="tv_title">必要な情報を入力してください。</string>
    <string name="tv_age">年齢</string>
    <string name="tv_height">身長</string>
    <string name="tv_weight">体重</string>
    <string name="tv_sai">歳</string>
    <string name="tv_cm">cm</string>
    <string name="tv_kg">kg</string>
    <string name="bt_calc">計算</string>
    <string name="bt_clear">クリア</string>
    <string name="dialog_title">警告</string>
    <string name="dialog_msg">適切な肥満度を求めるためには、６歳未満の場合はカウプ指数が、６歳から１５歳まではローレル指数が使われます。本アプリはBMIのみに対応しています。</string>
    <string name="dialog_bt_ok">確認</string>

</resources>